--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ulrich.dev</title>
   </head>
-  <body class="bg-primary-blue-50">
+  <body class="bg-primary-black-50">
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
